unpackaged/main/default/objects/Sequence_Definition__c/Sequence_Definition__c.object-meta.xml
<CustomObject>
    <label>Sequence Definition</label>
    <nameField>
        <label>Sequence Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sequence Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>