unpackaged/main/default/objects/Sequence_Definition__c/fields/Assignee_Segment__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Segment__c</fullName>
    <label>Assignee Segment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Segment</valueSetName>
    </valueSet>
</CustomField>