unpackaged/main/default/objects/Sequence_Definition__c/fields/Assignee_Sourcing_Category__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Sourcing_Category__c</fullName>
    <label>Assignee Sourcing Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Sourcing_Category</valueSetName>
    </valueSet>
</CustomField>