unpackaged/main/default/objects/Sequence_Definition__c/fields/Assignee_Territory__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Territory__c</fullName>
    <label>Assignee Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Territory</valueSetName>
    </valueSet>
</CustomField>