unpackaged/main/default/objects/Sequence_Definition__c/fields/Experiment_Name__c.field-meta.xml
<CustomField>
    <fullName>Experiment_Name__c</fullName>
    <label>Experiment: Name</label>
    <length>15</length>
    <type>Text</type>
</CustomField>