unpackaged/main/default/objects/Sequence_Definition__c/fields/Manual_Sequence_Name__c.field-meta.xml
<CustomField>
    <fullName>Manual_Sequence_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Sequence Name?</label>
    <type>Checkbox</type>
</CustomField>