unpackaged/main/default/objects/Sequence_Definition__c/fields/Outreach_Sequence_ID__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Sequence_ID__c</fullName>
    <externalId>true</externalId>
    <label>Outreach: Sequence ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>