unpackaged/main/default/objects/Sequence_Definition__c/fields/Personalization_Level__c.field-meta.xml
<CustomField>
    <fullName>Personalization_Level__c</fullName>
    <label>Personalization Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>1 Step</fullName>
            </value>
            <value>
                <fullName>2 Steps</fullName>
            </value>
            <value>
                <fullName>3 Steps</fullName>
            </value>
            <value>
                <fullName>All Steps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>