unpackaged/main/default/objects/Sequence_Definition__c/fields/Sequence_Long_Name__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Long_Name__c</fullName>
    <label>Sequence Long Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>