unpackaged/main/default/objects/Sequence_Definition__c/fields/Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Short_Name__c</fullName>
    <label>Short Name</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>