unpackaged/main/default/objects/Sequence_Definition__c/fields/Subteam__c.field-meta.xml
<CustomField>
    <fullName>Subteam__c</fullName>
    <label>Subteam</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Subteam</valueSetName>
    </valueSet>
</CustomField>