unpackaged/main/default/objects/Sequence_Definition__c/fields/Target_Account__c.field-meta.xml
<CustomField>
    <fullName>Target_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sequence Definitions</relationshipLabel>
    <relationshipName>Sequence_Definitions</relationshipName>
    <type>Lookup</type>
</CustomField>