unpackaged/main/default/objects/Sequence_Definition__c/fields/Target_Persona_Level__c.field-meta.xml
<CustomField>
    <fullName>Target_Persona_Level__c</fullName>
    <label>Target Persona: Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Senior</fullName>
            </value>
            <value>
                <fullName>Mid</fullName>
            </value>
            <value>
                <fullName>Junior</fullName>
            </value>
            <value>
                <fullName>Any</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>