unpackaged/main/default/objects/Sequence_Definition__c/validationRules/experiment_without_treatment.validationRule-meta.xml
<ValidationRule>
    <fullName>experiment_without_treatment</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(Experiment_Name__c)) &amp;&amp; ISPICKVAL(Experiment_Treatment__c,&quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Experiment_Treatment__c</errorDisplayField>
    <errorMessage>Treatment required when defining an experiment</errorMessage>
</ValidationRule>