unpackaged/main/default/objects/Sequence_Definition__c/validationRules/Seq_Def_not_unique.validationRule-meta.xml
<ValidationRule>
    <fullName>Seq_Def_not_unique</fullName>
    <active>true</active>
    <errorConditionFormula>VLOOKUP($ObjectType.Sequence_Definition__c.Fields.Name,$ObjectType.Sequence_Definition__c.Fields.Name,Name)=Name &amp;&amp; (ISNEW() || ISCHANGED(Name))</errorConditionFormula>
    <errorMessage>Sequence Definition already exists with this name</errorMessage>
</ValidationRule>