unpackaged/main/default/objects/Sequence_Definition__c/validationRules/treatment_without_experiment.validationRule-meta.xml
<ValidationRule>
    <fullName>treatment_without_experiment</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Experiment_Name__c) &amp;&amp; NOT(ISPICKVAL(Experiment_Treatment__c,&quot;&quot;))</errorConditionFormula>
    <errorDisplayField>Experiment_Name__c</errorDisplayField>
    <errorMessage>Cannot set treatment without a defined experiment</errorMessage>
</ValidationRule>